--- a/pages/donate/index.html
+++ b/pages/donate/index.html
@@ -23,8 +23,8 @@
       <button class="header__btn">Donate</button>
     </header>
     <!-- DONA -->
-    <div class="dona container">
-      <div class="dona__content">
+    <div class="dona">
+      <div class="dona__content container">
         <div class="dona__content-section">
           <div class="dona__content-section--line"></div>
           <div class="dona__content-section--title">Donate</div>
@@ -42,7 +42,7 @@
         </div>
       </div>
       <!-- HOW TO -->
-      <div class="dona__howto">
+      <div class="dona__howto container">
         <div class="dona__howto-content">
           <div class="dona__howto-content-text">
             <h2 class="dona__howto-content-text--heading">How you can contribute to protect Earth</h2>
@@ -80,7 +80,7 @@
         </div>
       </div>
       <!-- USEGE -->
-      <div class="dona__usege">
+      <div class="dona__usege container">
         <div class="dona__usege-content">
           <h2 class="dona__usege-content--heading">How we use your donation</h2>
           <p class="dona__usege-content--para">
@@ -92,6 +92,57 @@
             Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.
             Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet.
           </p>
+        </div>
+      </div>
+      <!-- CTA -->
+      <div class="cta container">
+        <div class="cta__content">
+          <div class="cta__content-project">
+            <img src="./../../public/images/CTV.jpg" alt="" class="cta__content-img" />
+            <div class="cta__content-project--title">
+              <h2 class="cta__content-project--heading">You can contribute to make the environment greener!</h2>
+              <div class="cta__content-project--button">
+                <button class="cta__content-project--btn">Join as a volunteer</button>
+                <button class="cta__content-project--btn2">Donate</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- FOOTER -->
+      <div class="footer">
+        <div class="footer__content container">
+          <img src="./public/svgs/Logoft.svg" alt="" />
+          <div class="footer__content-item">
+            <div class="footer__content-item--title">
+              <p class="footer__content-item--p">Our team</p>
+              <p class="footer__content-item--para">About us</p>
+              <p class="footer__content-item--para">Team</p>
+              <p class="footer__content-item--para">What we do</p>
+              <p class="footer__content-item--para">Contact</p>
+            </div>
+            <div class="footer__content-item--title">
+              <p class="footer__content-item--p">More</p>
+              <p class="footer__content-item--para">Projects</p>
+              <p class="footer__content-item--para">Events</p>
+              <p class="footer__content-item--para">Donate</p>
+              <p>Blog</p>
+            </div>
+            <div class="footer__content-item--title">
+              <p class="footer__content-item--p">Connect</p>
+              <p class="footer__content-item--para">Facebook</p>
+              <p class="footer__content-item--para">Instagram</p>
+              <p class="footer__content-item--para">Twitter</p>
+              <p class="footer__content-item--para">Linkdin</p>
+            </div>
+          </div>
+          <div class="footer__content-btn">
+            <p class="footer__content-heading">Subscribe to get latest updates</p>
+            <div class="footer__content-btn--in">
+              <input type="text" placeholder="Your email" />
+              <button>Subscribe</button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
